Wed Aug 12 18:26:09 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>

        * DAnCE/NodeApplication/NodeApplication.mpc:
        * MPC/config/ciao_cs_client.mpb:

          try to fix link problems introduced by
        Tue Aug 11 11:51:29 UTC 2009  ChangeLog  <William R. Otte>
        
Wed Aug 12 18:00:56 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/XMLSchema/Traversal.hpp:
        * tools/Config_Handlers/XMLSchema/Types.hpp:

          Integrated more cleanly the changes from XSC XSCRT/XMLSchema.

Wed Aug 12 13:30:50 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/XMLSchema/Traversal.hpp:
        * tools/Config_Handlers/XMLSchema/Traversal.ipp:
        * tools/Config_Handlers/XMLSchema/Traversal.tpp:
        * tools/Config_Handlers/XMLSchema/TypeInfo.ipp:
        * tools/Config_Handlers/XMLSchema/TypeInfo.tpp:
        * tools/Config_Handlers/XMLSchema/Types.hpp:
        * tools/Config_Handlers/XMLSchema/Types.ipp:
        * tools/Config_Handlers/XMLSchema/Types.tpp:
        * tools/Config_Handlers/XMLSchema/Writer.hpp:
        * tools/Config_Handlers/XSCRT/ExtendedTypeInfo.hpp:
        * tools/Config_Handlers/XSCRT/ExtendedTypeInfo.ipp:
        * tools/Config_Handlers/XSCRT/Parser.hpp:
        * tools/Config_Handlers/XSCRT/Traversal.hpp:
        * tools/Config_Handlers/XSCRT/Traversal.tpp:
        * tools/Config_Handlers/XSCRT/Writer.hpp:
        * tools/Config_Handlers/XSCRT/XML.hpp:

          Rolled back the XSC update, it didn't include a number of fixes
          necessary for Borland and Xerces2/3.

Wed Aug 12 10:21:10 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/OMG-CCM-Tutorial.ppt:
          Small updates regarding to CORBA usage and the official OMG
          spec document numbers

Wed Aug 12 07:27:10 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_base.mpb:
          Added after of DDS4CCM_lem_gen
