@@ -1,3 +1,9 @@
+Thu Aug 13 01:23:29 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>
+
+        * DAnCE/NodeManager/Node_Manager_Module.cpp:
+
+          Unicode compile errors. 
+        
 Wed Aug 12 18:26:09 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>
 
         * DAnCE/NodeApplication/NodeApplication.mpc:
@@ -5,7 +11,7 @@ Wed Aug 12 18:26:09 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>
 
           try to fix link problems introduced by
         Tue Aug 11 11:51:29 UTC 2009  ChangeLog  <William R. Otte>
-        
+
 Wed Aug 12 18:00:56 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>
 
         * tools/Config_Handlers/XMLSchema/Traversal.hpp:
